learning: fill early curriculum gaps